# ragbench

./: .gitignore  .mcp.json  CLAUDE.md  DEVELOPMENT.md  ERRORS_FIXED.md  EVALS_README.md  LICENSE.md  OVERVIEW.md  README.md  config.yml  docker-compose.bench.yml  docker-compose.cloud.yml  docker-compose.server.yml  docker-compose.yml  justfile
.claude/: settings.json
services/evals/: Dockerfile  pyproject.toml
services/evals/api/: app.py  dashboard.py  job_manager.py  routes.py  schemas.py
services/evals/data/dataset_cache/: 3c4d5e05f98c623b.json  de803fb448c98fe5.json
services/evals/evals/: README.md  __main__.py  calibration.py  cli.py  config.py  export.py  runner.py
services/evals/evals/data/: golden_baseline.json  golden_qa.json
services/evals/evals/datasets/: hotpotqa.py  msmarco.py  qasper.py  ragbench.py  registry.py  squad_v2.py
services/evals/evals/judges/: llm_judge.py
services/evals/evals/metrics/: abstention.py  base.py  citation.py  generation.py  performance.py  retrieval.py  text_match.py
services/evals/evals/schemas/: dataset.py
services/evals/infrastructure/: __init__.py  settings.py
services/evals/infrastructure/config/: models_config.py
services/evals/infrastructure/llm/: __init__.py  factory.py
services/evals/tests/: conftest.py  test_api.py  test_rag_eval.py
services/rag_server/: Dockerfile  alembic.ini  main.py  pyproject.toml
services/rag_server/app/: __init__.py  anthropic_client.py  settings.py
services/rag_server/core/: config.py  logging.py
services/rag_server/evals/: __init__.py  runner.py
services/rag_server/evaluation_cc/: __init__.py  __main__.py  cli.py  config.py  export.py  runner.py
services/rag_server/infrastructure/: auth.py
services/rag_server/pipelines/: inference.py  ingestion.py
services/rag_server/schemas/: api_keys.py  eval.py  health.py  metrics.py  query.py  settings.py
services/rag_server/scripts/: README.md  benchmark_pipeline.py
services/rag_server/services/: baseline.py  comparison.py  metrics.py  recommendation.py  session.py  session_titles.py
services/rag_server/tests/: conftest.py  test_api_key_validation.py  test_auth.py  test_bm25_query_safety.py  test_contextual_retrieval.py  test_core_config.py  test_embeddings.py  test_inference_async.py  test_ingestion_embedding.py  test_llm_factory.py  test_llm_integration.py  test_metrics_api.py  test_pii_masking.py  test_privacy_posture.py  test_rag_eval.py  test_task_worker_concurrency.py  test_worker_executor.py
(+193 files in other folders)
